including viewport to fit content on all devices and fixing navbar overlap

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,3 +14,7 @@
  *= require_self
  */
 @import "semantic-ui";
+
+#aboutNavbar {
+    background-color: white;
+}
